<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hellosdl2w.MainActivity">

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/editIP"
        android:layout_below="@+id/txtHello"
        android:text="192.168.1.9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:text="12345"
        android:inputType="number"
        android:id="@+id/editPort"
        android:layout_below="@+id/editIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btConnect"
        android:textAllCaps="false"
        android:text="Connect"
        android:layout_below="@+id/editPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- EditText for entering a phone number  -->
    <EditText
        android:id="@+id/editText_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btConnect"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:inputType="phone"
        android:hint="@string/enter_phone" />

    <!-- EditText for entering a message  -->
    <EditText
        android:id="@+id/sms_message"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_main"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/enter_message_here"
        android:inputType="textMultiLine"/>

    <!-- The smsSendMessage() method will be called by this button.  -->
    <ImageButton
        android:id="@+id/message_icon"
        android:contentDescription="@string/send_a_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/sms_message"
        android:layout_toEndOf="@id/sms_message"
        android:layout_below="@id/editText_main"
        android:src="@drawable/ic_message_black_24dp"
        android:visibility="visible"
        />

    <!-- The retryApp() method will be called by this button.  -->
    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/retry"
        android:layout_below="@id/sms_message"
        android:text="@string/retry"
        android:visibility="visible"
        android:onClick="retryApp"/>

    <TextView
        android:id="@+id/textSimulate"
        android:layout_centerInParent="true"
        android:layout_below="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click below buttons to simulate test">
    </TextView>

    <RelativeLayout
        android:id="@+id/testBtnLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/textSimulate">

        <Button
            android:id="@+id/btnInCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="InCall"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDial"
            android:text="Dial"
            android:layout_toRightOf="@id/btnInCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnEndCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnDial"
            android:text="EndCall"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnPushDummySMS"
            android:text="push SMS"
            android:layout_toRightOf="@id/btnEndCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnLoadSms"
            android:text="Load SMS"
            android:layout_below="@id/btnInCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnDial"
            android:layout_toRightOf="@+id/btnLoadSms"
            android:text="Load Contact"
            android:textAllCaps="false" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/testBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list"
            android:layout_width="359dp"
            android:layout_height="199dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>


</RelativeLayout>
